--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <button class="tab-button" onclick="openTab(event, 'surveillance')">Paramètres Vitaux</button>
                     <button class="tab-button" onclick="openTab(event, 'antecedents')">Antécédents & Traitements</button>
                     <button class="tab-button" onclick="openTab(event, 'dossierTransfusionnel')">Dossier Transfusionnel</button>
-                    <button class="tab-button" onclick="openTab(event, 'transmissions')">Transmissions & Diagnoses</button>
+                    <button class="tab-button" onclick="openTab(event, 'transmissions')">Transmissions</button>
                 </div>
 
                 <div id="infoPatient" class="tab-content">
@@ -126,13 +126,13 @@
                 </div>
 
                 <div id="transmissions" class="tab-content">
-                    <h2 class="tab-title">Notes et Diagnoses Infirmières</h2>
+                    <h2 class="tab-title">Notes Infirmières</h2>
                     <div class="card">
                         <h3>Transmissions Infirmières</h3>
                         <textarea id="studentTransmissions" placeholder="Saisissez vos observations et transmissions..."></textarea>
                     </div>
                     <div class="card">
-                        <h3>Diagnoses Infirmières</h3>
+                        <h3>Problèmes identifiés</h3>
                         <textarea id="studentDiagnoses" placeholder="Saisissez vos diagnoses infirmières..."></textarea>
                     </div>
                     <div class="button-container">
@@ -149,3 +149,4 @@
 
 </body>
 </html>
+
