--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <textarea id="studentDiagnoses" placeholder="Saisissez vos diagnoses infirmières..."></textarea>
                     </div>
                     <div class="button-container">
-                        <button onclick="saveStudentNotes()">Enregistrer les notes et diagnoses</button>
+                        <button onclick="saveStudentNotes()">Enregistrer les transmissions</button>
                     </div>
                 </div>
 
@@ -149,4 +149,5 @@
 
 </body>
 </html>
+
 
